--- a/recipes.html
+++ b/recipes.html
@@ -15,7 +15,7 @@
 
 		<h1>Recipes</h1>
 
-		<input class="search" placeholder="Search Recipes" type="search">
+		<!-- <input class="search" placeholder="Search Recipes" type="search"> -->
 
 		<!-- use a class for js and a class for styles so you can change the styles class if you need to in refactoring and won't have to update your js. -->
 		<div class="js-recipes-container recipes-container">
@@ -26,11 +26,14 @@
 
 		<div class="js-single-recipe single-recipe">
 
-		</div>
 			<h2></h2>
 			<p></p>
 			<ul></ul>
-			
+
+		</div>
+		
+		<div class="editing">
+
 			<input class="edit-name" placeholder="Edit Recipe Name"></input>
 			<input class="edit-description" placeholder="Edit Recipe Description"></input>
 			<input class="edit-ingredients" placeholder="Edit Recipe Ingredients"></input>
@@ -41,6 +44,7 @@
 			
 			<button class="back">Back to All Recipes</button>
 
+		</div>
 
 	</div>
 
